# markob

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-image.yml
firefox/: background.js  exhigh.js  manifest.json
firefox/popup/: popup.css  popup.html
server/: server.py
