[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markob"
version = "0.0.2"
authors = [
  { name="rooyca", email="rooyca@gmail.com" },
]
description = "Markob API lets you highlight text on web pages and save it to Obsidian."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/rooyca/markob"
issues = "https://github.com/rooyca/markob/issues"

[project.scripts]
markob = "server.server:main"